--- a/src/components/Detail/detail.css
+++ b/src/components/Detail/detail.css
@@ -1,3 +1,8 @@
+.banner{
+    position: relative;
+    display: flex;
+    align-items: center;
+}
 .score{
     border-radius: 50%;
     border: green solid;
@@ -11,4 +16,54 @@
     border: none;
     margin-left: 10px;
     cursor: pointer;
+}
+.banner-img-detail{
+    filter: brightness(30%);
+    object-fit: cover;
+    width: 100%;
+    height: 600px;
+    margin-bottom: 30px;
+    position:absolute;
+    top:0;
+    left:0;
+}
+.cast{
+    display: flex;
+    flex-wrap: wrap;
+    grid-gap: 20px;
+    margin-top: 20px;
+}
+.info{
+    text-align: center;
+    display: flex;
+    z-index: 100;
+    margin: 121px 70px;
+}
+.info h1{
+    margin: 0;
+}
+.info-text{
+    margin-left: 20px;
+    color: white;
+    text-align: start;
+}
+.detail-content{
+    display: flex;
+    text-align: start;
+    margin: 0px 40px;
+}
+.left-page .cast-title{
+    font-family: "Hammersmith One";
+    margin: 0;
+}
+.production .cast-title{
+    font-family: "Hammersmith One";
+    margin: 0;
+}
+.production{
+    flex: 1;
+    text-align: start;
+}
+.left-page{
+    flex:3;
 }
