--- a/src/components/Catalogue/catalogue.css
+++ b/src/components/Catalogue/catalogue.css
@@ -1,8 +1,7 @@
 .catalogue{
-    margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    grid-gap: 40px;
-    justify-content: center;
+    grid-gap: 20px;
+    justify-content:left;
 
 }
