--- a/src/components/Catalogue/catalogue.css
+++ b/src/components/Catalogue/catalogue.css
@@ -1,7 +1,12 @@
-.catalogue{
+.catalogue {
     display: flex;
     flex-wrap: wrap;
     grid-gap: 20px;
-    justify-content:left;
+    justify-content: center;
+}
 
+@media (max-width: 760px) {
+    .catalogue{
+        justify-content: center;
+    }
 }
