--- a/src/components/Carousel/carousel.css
+++ b/src/components/Carousel/carousel.css
@@ -1,7 +1,7 @@
 .side-scroll{
     display: grid;
     grid-auto-flow: column;
-    overflow-x: auto;
+    overflow-x: scroll;
     column-gap: 2em;
     margin: 20px 40px;    
 }
@@ -26,4 +26,6 @@
 .side-scroll .media-img{
     border-radius: 5px;
     margin-bottom: 20px;
+}
+@media (max-width: 760px) {
 }
